# dpn-petri-nets

./: .gitignore  README.md  dpn-petri-nets.cabal  stack.yaml
app/: CalActorToDot.hs
cal-examples/: max-pixel.cal  one-pure-action.cal  one-pure-action.dot  two-stateful-actions.cal  two-stateful-actions.dot
docs/: dpn-to-cpn.bib  dpn-to-cpn.org
src/: ActorToDot.hs  CalActorToDot.hs  Lib.hs  Nets.hs  PetriNets.hs  PetriNets2.hs  Types.hs
