name:                dpn-petri-nets
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/dpn-petri-nets#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , ActorToDot
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
                     , multiset
                     , graphviz
                     , cal-src
  default-language:    Haskell2010

executable dpn-petri-nets-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dpn-petri-nets
  default-language:    Haskell2010

executable cal2dot
  hs-source-dirs:      app
  main-is:             CalActorToDot.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dpn-petri-nets
  default-language:    Haskell2010

  
-- test-suite dpn-petri-nets-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , dpn-petri-nets
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/dpn-petri-nets
